--- a/EmployableApp/Views/Home/Index.cshtml
+++ b/EmployableApp/Views/Home/Index.cshtml
@@ -9,16 +9,34 @@
 
 </div>
 
-                <div class="row" style="height:400px;">
-                    <div class="image-wrap">
-
-                    <a href="~/Jobs/Search"><img src="http://ww2.kqed.org/pop/wp-content/uploads/sites/12/2013/03/HireMe.jpeg" style="float: left; width: 32%; height:400px; margin-right: 1%; margin-bottom: 0.5em; "></a>
-                        <p class="image-title">Job Search</p>
-                    </div>
-                        <a href="~/Resumes/Create"><img src="http://www.oknation.net/blog/home/user_data/file_data/201406/07/1144740.jpg" style="float: left; height:400px; width: 32%; margin-right: 1%; margin-bottom: 0.5em;"></a>
-                    <a href="~/Events/Index"><img src="http://alzheimersismylife.com/wp-content/uploads/2014/11/minimalist-simple-calendar1-676x450.jpg" style="float: left; height:400px; width: 32%; margin-right: 1%; margin-bottom: 0.5em;"></a>
-                    <p style="clear: both;">
+     <div class="row" style="height:45vh;">
+    <div class="col-sm-4 image-wrap">
+            <a href="~/Jobs/Search">
+                <img src="http://ww2.kqed.org/pop/wp-content/uploads/sites/12/2013/03/HireMe.jpeg" style="float: left;  height:45vh; margin-bottom: 0.5em; ">
+                <div class="image-title">
+                    Search For Jobs
                 </div>
+                </a>
+        </div>
+    
+
+    <div class="col-sm-4 image-wrap">  
+        
+            <a href="~/Resumes/Create">
+                <img src="@Url.Content("~/Content/Images/coffee-cup-desk-pen.jpg")" style="float: left; height:45vh; margin-bottom: 0.5em;">
+                <div class="image-title"> Build Your Resume      
+                </div>
+            </a>
+  
+    </div>
+    <div class="col-sm-4 image-wrap">
+        <a href="~/Events/Index">
+            <img src="@Url.Content("~/Content/Images/numbers-time-watch-white.jpg")" style="float: left; height:45vh; margin-bottom: 0.5em;">
+            <div class="image-title">Manage Your Calendar</div>
+        </a>
+    </div>
+</div>
+<p style="clear: both;">
 
 <p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
 
