modified job detail view

--- a/EmployableApp/Views/Jobs/Details.cshtml
+++ b/EmployableApp/Views/Jobs/Details.cshtml
@@ -8,11 +8,11 @@
 <h2>City Information:</h2>
 
 
-           <div id="cityName"></div>
-           <div id="populationField"></div>
-           <div id="cityInfo"></div>
+           <div id="cityName">Loading...</div>
+           <div id="populationField">Loading...</div>
+           <div id="cityInfo">Loading...</div>
 
-    <div id="progress">
+    <div id="progress">Loading...
         
     </div>
 
