--- a/EmployableApp/Views/Addresses/Details.cshtml
+++ b/EmployableApp/Views/Addresses/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model EmployableApp.Models.Address
+﻿@model EmployableApp.Models.IndexViewModel
 
 @{
     ViewBag.Title = "Details";
@@ -6,61 +6,8 @@
 
 <h2>Details</h2>
 
-<div>
-    <h4>Address</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.HouseNumber)
-        </dt>
+<div id="regionQuestion"></div>
 
-        <dd>
-            @Html.DisplayFor(model => model.HouseNumber)
-        </dd>
+<div id="stateQuestion"></div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.AptNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AptNumber)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Street)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Street)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.City)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.City)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.State)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.State)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ZipCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ZipCode)
-        </dd>
-
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Address_id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+<div id="cityFinal"></div>
