--- a/EmployableApp/Views/Events/Index.cshtml
+++ b/EmployableApp/Views/Events/Index.cshtml
@@ -8,9 +8,9 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+@*<h2>Index</h2>*@
 
-<p>
+@*<p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
@@ -53,7 +53,7 @@
 }
 
     
-</table>
+</table>*@
 
 
 <div class="container">
@@ -63,8 +63,6 @@
         </div>
     </div>
 </div>
-
-
 
 
 <script type="text/javascript">
@@ -104,8 +102,11 @@
                 var description = prompt('Enter a description:');
                 if (description) {
                     var data = {title: description, start: date, end: date, editable: true, allDay: false, }
-                    $('#calendar').fullCalendar('renderEvent', { title: description, start: date, end: date}, true);
+                    $('#calendar').fullCalendar('renderEvent', { title: description, start: date, end: date }, true);
+
                     CreateEvent(data);
+                    $('#calendar').fullCalendar('refetchEventSources', 'GetCalendarEvents');
+
                 }
             },
 
@@ -156,14 +157,11 @@
             }),
             success: function (data, textStatus) {
                 if (!data) {
-                    //revertFunc();
+                    alert("Changes could not be saved.");
                     return;
                 }
                 calendar.fullCalendar('updateEvent', event);
             },
-            error: function () {
-            //    revertFunc();
-            }
         });
     };
 
@@ -178,13 +176,10 @@
 
             success: function (data, textStatus) {
                 if (!data) {
-                    //revertFunc();
+                    //alert("Event could not be deleted.");
                     return;
                 }
             },
-            error: function () {
-                //    revertFunc();
-            }
         });
     };
 
@@ -205,14 +200,11 @@
 
             success: function (data, textStatus) {
                 if (!data) {
-                    //revertFunc();
+                    //alert("Event could not be created.");
                     return;
                 }
                 calendar.fullCalendar('updateEvent', event);
             },
-            error: function () {
-                //    revertFunc();
-            }
         });
     };
 </script>
