--- a/EmployableApp/Views/Home/Index.cshtml
+++ b/EmployableApp/Views/Home/Index.cshtml
@@ -5,6 +5,7 @@
 <div class="jumbotron">
 
         <h1>.employable</h1>
+        <h2>.you + .us = .hired</h2>
         @*<p class="btn btn-primary btn-lg">@Html.ActionLink("Learn More", "Index", "Home") &raquo; </p>*@
 
 </div>
@@ -52,5 +53,5 @@
 
 <p style="clear: both;">
 
-<p><a class="btn btn-default" href="">Learn more &raquo;</a></p>
+
 
