--- a/EmployableApp/Views/Shared/_HomeLayout.cshtml
+++ b/EmployableApp/Views/Shared/_HomeLayout.cshtml
@@ -1,39 +1,47 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - .employable</title>
     <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.css">  
+    <link rel="stylesheet" type="text/css" href="~/Content/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="~/Content/Site.css">
 
-         @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body style="margin-left: 7vw;">
-    <div class="navbar sidenav" id="mySideNav" style="width: 7vw;">
+<body>
+    <div class="navbar sidenav" id="mySideNav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         @Html.ActionLink("Home", "Index", "Home")
         @Html.ActionLink("About", "About", "Home")
         @Html.ActionLink("Contact", "Contact", "Home")
-
         @Html.Partial("_LoginPartial")
 
     </div>
+    <span style="font-size: 30px; cursor: pointer" onclick="openNav()"> &#9776; Menu</span>
 
 
     <div class="body-content">
         @RenderBody()
         <hr />
-        <footer class="footer">
+        <footer>
             <p>&copy; @DateTime.Now.Year - dotemployable.com</p>
         </footer>
     </div>
 
-   @*@Scripts.Render("~/bundles/jquery")*@
+    @*@Scripts.Render("~/bundles/jquery")*@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script>
+function openNav() {
+    document.getElementById("mySideNav").style.width = "7vw";
 
+}
+            function closeNav() {
+                document.getElementById("mySideNav").style.width = "0";
+            }
+    </script>
 </body>
 </html>
