finished creating create resume

--- a/EmployableApp/Views/Jobs/Details.cshtml
+++ b/EmployableApp/Views/Jobs/Details.cshtml
@@ -10,9 +10,9 @@
 
            <div id="cityName">Loading...</div>
            <div id="populationField">Loading...</div>
-           <div id="cityInfo">Loading...</div>
+           <div id="cityInfo">Detailed information not available for this city. Sorry.</div>
 
-    <div id="progress">Loading...
+    <div id="progress">
         
     </div>
 
