--- a/EmployableApp/Views/Home/Index.cshtml
+++ b/EmployableApp/Views/Home/Index.cshtml
@@ -1,13 +1,16 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
-<div class="jumbotron">
+<div class="row">
+<div class="navbar navbar-right"> @Html.Partial("_LoginPartialCornerDisplay")</div>
+    </div>
+<div class="row">
+    <div class="jumbotron">
 
         <h1>.employable</h1>
         <h2>.you + .us = .hired</h2>
-        @*<p class="btn btn-primary btn-lg">@Html.ActionLink("Learn More", "Index", "Home") &raquo; </p>*@
 
+    </div>
 </div>
 
      <div class="row" style="height:45vh;">
