--- a/EmployableApp/Views/Shared/_Layout.cshtml
+++ b/EmployableApp/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 
 </head>
 <body style="margin-left: 7vw;">
-    <div class="navbar sidenav" id="mySideNav" style="width: 7vw;">
+    <div class="navbar sidenav" id="mySideNav" style="width: 10vw;">
         @Html.ActionLink("Home", "Index", "Home")
         @Html.ActionLink("About", "About", "Home")
         @Html.ActionLink("Contact", "Contact", "Home")
@@ -23,7 +23,7 @@
     </div>
 
 
-    <div class="body-content">
+    <div class="body-content" style="margin: 9vw;">
         @RenderBody()
         <hr />
         <footer class="footer">
