--- a/EmployableApp/Views/Resumes/Create.cshtml
+++ b/EmployableApp/Views/Resumes/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create a Resume</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Fill in the form below to create a file</h4>
+        <h4>We'll use your current account information plus what you fill in below to make a resume document just for you. </h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
