--- a/EmployableApp/Views/Shared/_LoginPartialCornerDisplay.cshtml
+++ b/EmployableApp/Views/Shared/_LoginPartialCornerDisplay.cshtml
@@ -3,22 +3,19 @@
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
     {
-    @Html.AntiForgeryToken()
+        @Html.AntiForgeryToken()
 
-    <ul class="navbar">
-        <li>
-            @Html.ActionLink("View Jobs", "SavedJobs", "Jobs")
-            @Html.ActionLink("Job Search", "Search", "Jobs")
-            @Html.ActionLink("Resume Help", "Create", "Resumes")
-            @Html.ActionLink("Calendar", "Index", "Events")
-         
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li>
+                @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            </li>
+            <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+        </ul>
     }
 }
 else
 {
-    <ul class="navbar">
+    <ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
