--- a/EmployableApp/Views/Shared/_Layout.cshtml
+++ b/EmployableApp/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
         @Html.ActionLink("Home", "Index", "Home")
         @Html.ActionLink("About", "About", "Home")
         @Html.ActionLink("Contact", "Contact", "Home")
+        @Html.ActionLink("City Match", "Details", "Addresses")
 
         @Html.Partial("_LoginPartial")
 
