updated titles for resumes view and split into three columns

--- a/EmployableApp/Views/Resumes/Create.cshtml
+++ b/EmployableApp/Views/Resumes/Create.cshtml
@@ -15,62 +15,67 @@
         <h4>We'll use your current account information plus what you fill in below to make a resume document just for you. </h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="row">
+            <div class="col-sm-4">
+                Personal Information
+                <div class="form-group">
+                    @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.FirstName, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control" })
+                <div class="form-group">
+                    @Html.LabelFor(m => m.HouseNumber, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.HouseNumber, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Street, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.Street, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.City, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(model => model.City, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.State, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(m => m.State, new { @class = "form-control" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ZipCode, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10" style="background-size: 100px">
+                        @Html.TextBoxFor(model => model.ZipCode, new { @class = "form-control" })
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.LastName, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.LastName, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.PhoneNumber, new { @class = "form-control" })
-            </div>
-        </div>
-  
-        <div class="form-group">
-            @Html.LabelFor(m => m.HouseNumber, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.HouseNumber, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Street, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.Street, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.City, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.City, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.State, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(m => m.State, new { @class = "form-control" })
-            </div>
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.ZipCode, new { @class = "col-md-2 control-label" })
-            <div class="col-md-10">
-                @Html.TextBoxFor(model => model.ZipCode, new { @class = "form-control" })
-            </div>
-        </div>
+            <div class="col-sm-4">
+           Employment Experience - most recent first
         <div class="form-group">
             @Html.LabelFor(model => model.JobExperienceOne, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -94,7 +99,7 @@
                 @Html.ValidationMessageFor(model => model.JobExperienceThree, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        Education
         <div class="form-group">
             @Html.LabelFor(model => model.HighSchool, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -118,7 +123,9 @@
                 @Html.ValidationMessageFor(model => model.OtherSchooling, "", new { @class = "text-danger" })
             </div>
         </div>
-
+                </div>
+            <div class="col-sm-4">
+        Do you have any special skills?
         <div class="form-group">
             @Html.LabelFor(model => model.Skills, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -126,7 +133,7 @@
                 @Html.ValidationMessageFor(model => model.Skills, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        Name Three References with Phone Numbers
         <div class="form-group">
             @Html.LabelFor(model => model.ReferenceOne, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -150,6 +157,8 @@
                 @Html.ValidationMessageFor(model => model.ReferenceThree, "", new { @class = "text-danger" })
             </div>
         </div>
+     </div>
+  </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
