--- a/EmployableApp/Views/Shared/_LoginPartial.cshtml
+++ b/EmployableApp/Views/Shared/_LoginPartial.cshtml
@@ -10,9 +10,8 @@
             @Html.ActionLink("View Jobs", "SavedJobs", "Jobs")
             @Html.ActionLink("Job Search", "Search", "Jobs")
             @Html.ActionLink("Resume Help", "Create", "Resumes")
-            @Html.ActionLink("Calendar", "Index", "Events")
-         
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
+            <a href="~/Events/Index"> Calendar</a>
+<li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
     }
 }
