about/contact page info updated.

--- a/EmployableApp/Views/Home/About.cshtml
+++ b/EmployableApp/Views/Home/About.cshtml
@@ -4,4 +4,20 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    .employable delivers on its promise to keep your job search organized. Job seekers can tap into Indeed.com's
+    jobs database to find current openings that meet their search criteria. 
+</p>
+
+<p>
+    Taking your job search even deeper, .employable gives you access to demographic information for many cities through teleport.org.
+    You can view data regarding cost of living, housing, education and safety, among other categories, to help determine if a city meets your needs.
+</p>
+
+<p>
+    .employable's city survey feature narrows down potential cities based on geographical regions and interests.
+</p>
+
+<p>
+    Job seekers can also track their interviews and other employment tasks with the calendar.
+</p>
