--- a/EmployableApp/Views/Home/Contact.cshtml
+++ b/EmployableApp/Views/Home/Contact.cshtml
@@ -5,13 +5,11 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    333 N. Plankinton<br />
+    Milwaukee, WI 53203<br />
+    Phone: (414) 533-0639
 </address>
-
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:damonyoung@wi.rr.com">Support@devcodecamp.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:damonyoung@wi.rr.com">Marketing@devcodecamp.com</a>
 </address>
